# emscripten

./: emcc.py  emscripten.py
src/: library_glfw.js  preamble.js  settings.js  support.js
system/include/emscripten/: em_import.h
system/lib/libc/musl/arch/emscripten/: syscall_arch.h
system/lib/libc/musl/src/internal/: syscall.h
tests/: runner.py  test_browser.py  test_core.py  test_other.py
tests/core/: test_ccall_post.js  test_emulate_function_pointer_casts.out
tools/: cache.py  shared.py
tools/em-import/: CMakeLists.txt  EmImport.cpp
